# docs

./: .gitignore  404.html  CODE_OF_CONDUCT.md  README.md  equipe.html  index.html  mkdocs.yml  pyproject.toml  uptime.html
.github/actions/: deploy.yaml
.github/scripts/: uptime.py
.github/uptime/: uptime.json  uptime.md
.github/workflows/: deploy.yaml  uptime.yaml
docs/: equipe.md  index.md  uptime.md
equipe/: index.html
search/: search_index.json
uptime/: index.html
